feat: update dsgvo/gdpr date

--- a/docs/de-de/modules/business-entscheidungen/pages/dsgvo.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/dsgvo.adoc
@@ -18,14 +18,14 @@ Die DSGVO gilt für alle Unternehmen, die in der EU tätig sind und personenbezo
 
 Beachte, dass in diesem Verzeichnis lediglich die verarbeitenden Tätigkeiten innerhalb der Software plentymarkets beschrieben sind. Die Auflistung und Beschreibung weiterer verarbeitenden Tätigkeiten, die in deinem Unternehmen Anwendung finden (wie z.B. Lohnbuchhaltung oder Verfahren innerhalb einer anderen eingesetzten Software), obliegen dem eigenen Verantwortungsbereich des Händlers.
 
-plentymarkets möchte ausdrücklich darauf hinweisen, dass dieses Verzeichnis keinen Anspruch auf Vollständigkeit und Richtigkeit erhebt und als Ergänzung zur eigenen Verarbeitungsverzeichnisses verwendet werden kann.  
+plentymarkets möchte ausdrücklich darauf hinweisen, dass dieses Verzeichnis keinen Anspruch auf Vollständigkeit und Richtigkeit erhebt und als Ergänzung zur eigenen Verarbeitungsverzeichnisses verwendet werden kann.
 
 Bitte beachte, dass plentymarkets Systeme erst *ab plentymarkets 7* DSGVO-konform sind. Das plentymarkets Webshop-Plugin *plentyShop LTS* wird mit der Einbindung der Checkbox zur Einwilligung der Datenübertragung an Versanddienstleister *ab Version 2.9.0* DSGVO-konform sein.
 
 [#300]
 == Link zum Download
 
-Lade als Ergänzung deines eigenen Verzeichnisses der Verarbeitungstätigkeiten link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentymarkets_Rechtliches/VVT_fuer_Kunden.pdf[das Dokument herunter] (link:https://github.com/plentymarkets/template-processing-directory/releases[ältere Versionen^]). Dieses Dokument beschreibt lediglich die verarbeitenden Tätigkeiten innerhalb der Software plentymarkets.  
+Lade als Ergänzung deines eigenen Verzeichnisses der Verarbeitungstätigkeiten link:https://cdn02.plentymarkets.com/pmsbpnokwu6a/frontend/plentymarkets_Rechtliches/VVT_fuer_Kunden.pdf[das Dokument herunter] (link:https://github.com/plentymarkets/template-processing-directory/releases[ältere Versionen^]). Dieses Dokument beschreibt lediglich die verarbeitenden Tätigkeiten innerhalb der Software plentymarkets.
 
 [#400]
 == DSGVO Best Practices
@@ -49,7 +49,7 @@ Vertragsabschluss digital abwickeln:
 . Öffne das Menü *plentymarkets Logo (Start) » Mein Konto*.
 . Klicke auf *Verträge* (icon:file-text[role="darkGrey"]).
 . Klicke auf den Tab *Dokumente* (icon:pencil[role="darkGrey"]).
-. Klicke auf den Vertrag *Vertragsanlage zur Auftragsverarbeitung (DS-GVO) Juli 2019*.
+. Klicke auf den Vertrag *Vertragsanlage zur Auftragsverarbeitung (DS-GVO) März 2022*.
 . Lade das Vertragsdokument herunter.
 . Gib deinen Namen ein und schicke das Formular ab. Dadurch ist der Vertrag geschlossen.
 
