fix more pos links DE

--- a/docs/de-de/modules/app/pages/app.adoc
+++ b/docs/de-de/modules/app/pages/app.adoc
@@ -48,16 +48,16 @@ Wartest du sehnsüchtig auf ein neues Feature? Wir informieren dich gerne über 
 Die plentymarkets App bietet dir eine Reihe nützlicher Funktionen, die auf den folgenden Seiten beschrieben sind.
 
 * xref:app:kennzahlen.adoc#[Unternehmenskennzahlen einsehen]
-* <<app/funktionen/artikelsuche#, Artikel-, Kunden- und Auftragsdaten einsehen>>
+* xref:app:artikelsuche.adoc#[Artikel-, Kunden- und Auftragsdaten einsehen]
 * xref:app:lagerverwaltung.adoc#[Mobile Warenwirtschaft]
 ** xref:app:rollende-kommissionierung.adoc#[Rollende Kommissionierung]
 ** xref:app:einbuchen-umbuchen.adoc#[Ware einbuchen und umbuchen]
 ** xref:app:verräumen.adoc#[Ware verräumen]
 ** xref:app:inventur.adoc#[Inventur durchführen]
-* <<pos#, Mobiles Kassensystem plentyPOS>>
+* xref:pos:pos.adoc#[Mobiles Kassensystem plentyPOS]
 ** xref:pos:pos-kassenbenutzer.adoc#30[Kassieren]
 ** xref:pos:pos-einrichten.adoc#2700[Gutscheine verkaufen und einlösen]
 ** xref:pos:pos-kassenbenutzer.adoc#173[Stornierungen und Retouren]
-** <<pos/pos-online-bestellungen#, Online-Bestellungen an der Kasse abschließen (Click & Collect)>>
+** xref:pos:pos-online-bestellungen.adoc#[Online-Bestellungen an der Kasse abschließen (Click & Collect)]
 ** xref:pos:pos-kassenbenutzer.adoc#180[Einlagen und Entnahmen]
 ** xref:pos:pos-kassenbenutzer.adoc#210[Tagesabschluss und Kassensturz]
