--- a/docs/de-de/modules/app/pages/installieren.adoc
+++ b/docs/de-de/modules/app/pages/installieren.adoc
@@ -97,7 +97,7 @@ App-Berechtigungen festlegen:
 Dieser Bereich wird erst aktiviert, nachdem du unter *Sichtbare Funktionen* ein Häkchen neben die Option *Einbuchung* gesetzt hast.
 
 | *POS-Funktionen*
-|Welche <<pos#, POS-Funktionen>> sollen deine Mitarbeiter:innen nutzen können? Setze Häkchen und bestimme somit die genauen Funktionen, die mit dem Backend-Benutzerkonto verwendet werden dürfen. +
+|Welche xref:pos:pos.adoc#[POS-Funktionen] sollen deine Mitarbeiter:innen nutzen können? Setze Häkchen und bestimme somit die genauen Funktionen, die mit dem Backend-Benutzerkonto verwendet werden dürfen. +
 Dieser Bereich wird erst aktiviert, nachdem du unter *Sichtbare Funktionen* ein Häkchen neben die Option *POS* gesetzt hast.
 
 | *Sichtbare Kennzahlen*
@@ -204,7 +204,7 @@ Hast du dich in die plentymarkets App eingeloggt? Willkommen! Deine erste Anlauf
 
 * Das Stiftsymbol (icon:pencil[role="blue"]) oben rechts. Tippe auf dieses Symbol, um xref:app:best-practices.adoc#[Geschäftszahlen wie Umsätze und Auftragsvolumen] auf deiner Startseite einzurichten.
 
-* Das Menüsymbol (icon:bars[role="blue"]) oben links. Tippe auf dieses Symbol, um in das Hauptmenü zu gelangen. Von hier aus kannst du deine <<app/funktionen/artikelsuche#, Artikel-, Kunden- und Auftragsdaten>> einsehen. Du kannst die App für deine xref:app:lagerverwaltung.adoc#[Warenwirtschaft im Lager nutzen]. Oder du kannst in deinem <<pos#, stationären Laden kassieren>>.
+* Das Menüsymbol (icon:bars[role="blue"]) oben links. Tippe auf dieses Symbol, um in das Hauptmenü zu gelangen. Von hier aus kannst du deine <<app/funktionen/artikelsuche#, Artikel-, Kunden- und Auftragsdaten>> einsehen. Du kannst die App für deine xref:app:lagerverwaltung.adoc#[Warenwirtschaft im Lager nutzen]. Oder du kannst in deinem xref:pos:pos.adoc#[stationären Laden kassieren].
 
 Bist du ins Hauptmenü gelangt? Schaue wieder auf die Kopfzeile. Auf der rechten Seite findest du jetzt zwei weitere Symbole:
 
