--- a/docs/de-de/modules/auftraege/pages/auftragsherkunft.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragsherkunft.adoc
@@ -4,7 +4,7 @@
 :author: team-order-core
 
 Omni-Channel-Verkauf mit plentymarkets bedeutet, dass du deine Artikel über eine Vielzahl von Kanälen anbieten und so Aufträge aus den verschiedensten Quellen generieren kannst.
-Einige Auftragsherkünfte sind im System vorab angelegt und können nicht geändert werden. Andere Herkünfte werden automatisch hinzugefügt, zum Beispiel durch das Einbinden eines Plugins oder <<pos#, plentyPOS>>.
+Einige Auftragsherkünfte sind im System vorab angelegt und können nicht geändert werden. Andere Herkünfte werden automatisch hinzugefügt, zum Beispiel durch das Einbinden eines Plugins oder xref:pos:pos.adoc#[plentyPOS].
 Plugin-Herkünfte können nicht gelöscht werden. Du kannst Herkünfte aber auch manuell hinzufügen.
 
 Jede Herkunft erhält eine eigene ID. Manche Herkünfte haben Unterherkünfte, bei denen die IDs dann Dezimalstellen haben. Die Marktplätze *Amazon* und *eBay* sowie plentyPOS haben je eine allgemeine Herkunft und Unterherkünfte.
