--- a/docs/de-de/modules/auftraege/pages/dokumentenarchiv.adoc
+++ b/docs/de-de/modules/auftraege/pages/dokumentenarchiv.adoc
@@ -43,7 +43,7 @@ Folgende Dokumenttypen sind im Dokumentenarchiv verfügbar:
 * xref:pos:pos-kassenbenutzer.adoc#210[Kassenstornierung]
 * xref:pos:pos-kassenbenutzer.adoc#210[Kassenstornorechnung]
 * xref:pos:pos-kassenbenutzer.adoc#450[Kassensturz]
-* <<pos/pos-kassenbenutzer#230, Tagesabschlussbericht/Z-Report>>
+* xref:pos:pos-kassenbenutzer.adoc#230[Tagesabschlussbericht/Z-Report]
 =====
 
 [.col-md-4]
