--- a/docs/de-de/modules/daten/pages/alte-tools-daten-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/alte-tools-daten-exportieren.adoc
@@ -40,7 +40,7 @@ Bei den vorkonfigurierten Datenformaten sind die Datenfelder, die exportiert wer
 | Der Export ist für die ERP-Lösung link:http://www.collmex.de[Collmex^] optimiert und exportiert Umsatz- oder Kund:innen-Daten. Es können Daten eines oder mehrerer Standorte exportiert werden, um diese Daten in link:http://collmex.de/cgi-bin/cgi.exe?1005,1,help,daten_importieren[Collmex zu importieren^]. Beim Export von Umsatzdaten werden für die korrekte Zuordnung die link:http://www.collmex.de/handbuch_basic.html#zahlungsbedingung_anlegen[Zahlungsbedingungs-IDs^] von Collmex verwendet.
 
 | *Finanzbuchhaltung*
-| Der Export im CSV-Format enthält optional Daten der Warenausgangsrechnungen, der Kassenbelege der <<pos#, plentymarkets Kasse>> oder sowohl der Rechnungen als auch der Belege. Der Export ist link:https://www.datev.de/web/de/startseite/startseite-n/[DATEV^]-konform. Es können Daten eines oder mehrerer Standorte exportiert werden. Als Import-Code den Zeichensatz UTF-8 und als Trennzeichen Semikolon wählen. +
+| Der Export im CSV-Format enthält optional Daten der Warenausgangsrechnungen, der Kassenbelege der xref:pos:pos.adoc#[plentymarkets Kasse] oder sowohl der Rechnungen als auch der Belege. Der Export ist link:https://www.datev.de/web/de/startseite/startseite-n/[DATEV^]-konform. Es können Daten eines oder mehrerer Standorte exportiert werden. Als Import-Code den Zeichensatz UTF-8 und als Trennzeichen Semikolon wählen. +
 *_Tipp:_* Für den CSV-Import eine Software verwenden, bei der diese Parameter vor dem Datenimport auswählbar sind.
 
 | *Hersteller-Provisionen*
