--- a/docs/de-de/modules/plugins/partials/marketplace-kategorien.adoc
+++ b/docs/de-de/modules/plugins/partials/marketplace-kategorien.adoc
@@ -29,5 +29,5 @@
 |Agenturen bieten verschiedene, auf individuelle Ansprüche ausgelegte, Leistungen an.
 
 | *Services » Hardware*
-|Verkauf von Kassensystemen. Weitere Informationen zum Kassensystem plentyPOS findest du unter *<<pos, Kassensystem/POS>>*.
+|Verkauf von Kassensystemen. Weitere Informationen zum Kassensystem plentyPOS findest du unter xref:pos:pos.adoc#[Kassensystem/POS].
 |====
