--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -2084,7 +2084,7 @@ Der Drucker wurde für den Druck einer oder mehrerer Belege ausgewählt und die 
 [#1090]
 == Druck von Artikeletiketten einrichten
 
-Wie du Etikettenvorlagen erstellst und Artikeletiketten in der Artikelsuche der plentymarkets App druckst, erfährst du auf der Handbuchseite xref:app:artikelsuche#[Artikel-, Kunden- und Auftragssuche].
+Wie du Etikettenvorlagen erstellst und Artikeletiketten in der Artikelsuche der plentymarkets App druckst, erfährst du auf der Handbuchseite xref:app:artikelsuche.adoc#[Artikel-, Kunden- und Auftragssuche].
 
 [IMPORTANT]
 .plentyBase einrichten
@@ -2133,7 +2133,7 @@ Die folgenden Vorgänge können ohne Internetverbindung nicht durchgeführt werd
 * xref:pos:pos-kassenbenutzer.adoc#250[Verkauf] und xref:pos:pos-kassenbenutzer.adoc#160[Einlösung] von Gutscheinen
 * xref:pos:pos-kassenbenutzer.adoc#135[Bestandskund:innen auswählen]
 * xref:pos:pos-kassenbenutzer.adoc#440[Anzahlungen entgegennehmen]
-* xref:pos:pos-online-bestellungen#900[Online-Bestellungen (Click & Collect)] laden und kassieren
+* xref:pos:pos-online-bestellungen.adoc#900[Online-Bestellungen (Click & Collect)] laden und kassieren
 * xref:pos:pos-kassenbenutzer.adoc#370[Retouren mit Zuordnung zum Hauptauftrag] buchen
 * xref:pos:pos-kassenbenutzer.adoc#220[Zwischenberichte] erstellen
 * xref:pos:pos-kassenbenutzer.adoc#230[Tagesabschlussberichte] erstellen
