--- a/docs/de-de/modules/warenwirtschaft/pages/mhd-charge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mhd-charge-verwalten.adoc
@@ -8,7 +8,7 @@ Du kannst in plentymarkets Varianten mit Mindesthaltbarkeitsdatum (MHD) und/oder
 [IMPORTANT]
 .MHD/Chargen mit plentyPOS nutzen
 ====
-Wenn du mit <<pos#, plentyPOS>> arbeitest, solltest du die Funktionen zur Verwaltung von MHD/Chargen noch nicht nutzen, da MHD- und Chargen-Daten aktuell noch zu Fehlern führen können. Diese Funktionen werden in Kürze nachgeliefert.
+Wenn du mit xref:pos:pos.adoc#[plentyPOS] arbeitest, solltest du die Funktionen zur Verwaltung von MHD/Chargen noch nicht nutzen, da MHD- und Chargen-Daten aktuell noch zu Fehlern führen können. Diese Funktionen werden in Kürze nachgeliefert.
 ====
 
 [#100]
